# takehome

./: .gitignore  .pylintrc  Dockerfile  README.md  main.py  pyproject.toml
src/: file_utils.py  indexer.py  utils.py
